# chess-movegen-js

./: .gitignore  .npmignore  ANALISIS.md  COMPILE_WASM.md  LICENSE  PUBLISHING.md  README.es.md  README.md  RUST_SETUP.md  engine.html  enginejsx88-2023-01-31-11-10-46.cpuprofile  enginejsxBB-2023-01-31-11-00-43.cpuprofile  hello.rs  hello.wasm  index.html  module.js  module.mjs  module.wasm  module.wat  package-lock.json  package.json
.github/workflows/: ci.yml
chess-bitboards-wasm/: Cargo.toml  FIXES.md  QUICK_START.md  README.md  benchmark.html  build.bat  build.sh  demo.html  package.json
chess-bitboards-wasm/examples/: integration.js
chess-bitboards-wasm/src/: lib.rs
chess-bitboards-wasm/tests/: test_operations.rs
css/: starter-template.css
js/: Hash_Fancy.js  bitboard.js  chess.js  debug.txt  engine.js  engine.ts  module.js  module.mjs  x88.js
tests/: bitboard-node.js  perft-positions.js  perft-test.js  x88-node.js  x88-standalone.js
