[package]
name = "chess-bitboards-wasm"
version = "0.1.0"
edition = "2021"
description = "High-performance bitboard operations for chess in WebAssembly"
license = "MIT"
authors = ["Mario Carbonell"]
repository = "https://github.com/mcarbonell/chess-movegen-js"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = ["wee_alloc", "console_error_panic_hook"]
wee_alloc = []
console_error_panic_hook = []